# local-rag-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py  chunking.py  embedding.py  llm.py  llm_test.py  qdrant.py
mymcp/: server.py  test.py  tools.py
ui/: index.html
