[project]
name = "local-rag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.0",
    "fastembed>=0.8.0",
    "google-genai==2.11.0",
    "google-generativeai>=0.8.6",
    "langchain==1.3.13",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-text-splitters==1.1.2",
    "mcp==1.28.1",
    "pypdf==6.14.2",
    "qdrant-client==1.18.0",
    "sentence-transformers==5.6.0",
    "sqlite-utils==4.1",
    "uvicorn>=0.51.0",
]
